HLS_Multirate/Multirate_v1/Multirate_v1/logs/hls_run_csim_13460.backup.log
  **** HLS Build v2024.2 5238294
INFO: [HLS 200-2005] Using work_dir C:/HLS-multirate-DSP/HLS_Multirate/Multirate_v1/Multirate_v1 
INFO: [HLS 200-1505] Using default flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'syn.file=FIR_HLS.cpp' from C:/HLS-multirate-DSP/HLS_Multirate/Multirate_v1/hls_config.cfg(7)
INFO: [HLS 200-10] Adding design file 'C:/HLS-multirate-DSP/HLS_Multirate/Multirate_v1/FIR_HLS.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=FIR_HLS.h' from C:/HLS-multirate-DSP/HLS_Multirate/Multirate_v1/hls_config.cfg(8)
INFO: [HLS 200-10] Adding design file 'C:/HLS-multirate-DSP/HLS_Multirate/Multirate_v1/FIR_HLS.h' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=../../Matlab/FIR_multirate_HLS.h' from C:/HLS-multirate-DSP/HLS_Multirate/Multirate_v1/hls_config.cfg(9)
INFO: [HLS 200-10] Adding design file 'C:/HLS-multirate-DSP/Matlab/FIR_multirate_HLS.h' to the project
INFO: [HLS 200-1465] Applying ini 'tb.file=FIR_HLS_TB.cpp' from C:/HLS-multirate-DSP/HLS_Multirate/Multirate_v1/hls_config.cfg(10)
INFO: [HLS 200-10] Adding test bench file 'C:/HLS-multirate-DSP/HLS_Multirate/Multirate_v1/FIR_HLS_TB.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'tb.file=../../Matlab/TS_HLS_multirate.res' from C:/HLS-multirate-DSP/HLS_Multirate/Multirate_v1/hls_config.cfg(11)
INFO: [HLS 200-10] Adding test bench file 'C:/HLS-multirate-DSP/Matlab/TS_HLS_multirate.res' to the project
INFO: [HLS 200-1465] Applying ini 'tb.file=../../Matlab/TS_HLS_multirate.dat' from C:/HLS-multirate-DSP/HLS_Multirate/Multirate_v1/hls_config.cfg(12)
INFO: [HLS 200-10] Adding test bench file 'C:/HLS-multirate-DSP/Matlab/TS_HLS_multirate.dat' to the project
INFO: [HLS 200-1465] Applying ini 'syn.top=FIR_HLS' from C:/HLS-multirate-DSP/HLS_Multirate/Multirate_v1/hls_config.cfg(13)
INFO: [HLS 200-1465] Applying ini 'flow_target=vivado' from C:/HLS-multirate-DSP/HLS_Multirate/Multirate_v1/hls_config.cfg(4)
INFO: [HLS 200-1505] Using flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'part=xck26-sfvc784-2LV-c' from C:/HLS-multirate-DSP/HLS_Multirate/Multirate_v1/hls_config.cfg(1)
INFO: [HLS 200-1611] Setting target device to 'xck26-sfvc784-2LV-c'
INFO: [HLS 200-1465] Applying ini 'package.output.format=ip_catalog' from C:/HLS-multirate-DSP/HLS_Multirate/Multirate_v1/hls_config.cfg(5)
INFO: [SIM 211-2] *************** CSIM start ***************
INFO: [SIM 211-4] CSIM will launch CLANG as the compiler.
INFO: [HLS 200-2036] Building debug C Simulation binaries
   Compiling ../../../../FIR_HLS.cpp in debug mode
csim.mk:94: recipe for target 'obj/FIR_HLS.o' failed
In file included from ../../../../FIR_HLS.cpp:1:
In file included from ../../../../FIR_HLS.h:2:
In file included from C:/AMD/Vitis/2024.2/include/ap_fixed.h:9:
In file included from C:/AMD/Vitis/2024.2/include/etc/ap_common.h:658:
In file included from C:/AMD/Vitis/2024.2/include/etc/ap_private.h:68:
In file included from C:/AMD/Vitis/2024.2/include/hls_half.h:26:
In file included from C:/AMD/Vitis/2024.2/include/etc/hls_half_fpo.h:19:
In file included from C:/AMD/Vitis/2024.2/include/hls_fpo.h:140:
In file included from C:/AMD/Vitis/2024.2/include/floating_point_v7_1_bitacc_cmodel.h:150:
C:/AMD/Vitis/2024.2/include/gmp.h:58:9: warning: '__GMP_LIBGMP_DLL' macro redefined [-Wmacro-redefined]
#define __GMP_LIBGMP_DLL  0
        ^
C:/AMD/Vitis/2024.2/include/floating_point_v7_1_bitacc_cmodel.h:142:9: note: previous definition is here
#define __GMP_LIBGMP_DLL 1
        ^
../../../../FIR_HLS.cpp:11:23: error: redefinition of 'y1' as different kind of symbol
    static fir_data_t y1=0;
                      ^
C:/AMD/Vitis/2024.2/tps/mingw/10.0.0/win64.o/nt/x86_64-w64-mingw32/include/math.h:310:24: note: previous definition is here
_CRTIMP double __cdecl y1 (double) __MINGW_ATTRIB_DEPRECATED_MSVC2005;
                       ^
../../../../FIR_HLS.cpp:31:12: error: non-object type 'double (double) __attribute__((cdecl))' is not assignable
        y1 = y1_phase0 + y1_phase1 + y1_phase2 + y1_phase3;
        ~~ ^
../../../../FIR_HLS.cpp:32:84: warning: address of function 'y1' will always evaluate to 'true' [-Wpointer-bool-conversion]
        y2 = FIR_filter(H_filter_FIR_kernel, b_FIR_kernel, N_DELAYS_FIR_kernel_MM, y1);
                                                                                   ^~
../../../../FIR_HLS.cpp:32:84: note: prefix with the address-of operator to silence this warning
        y2 = FIR_filter(H_filter_FIR_kernel, b_FIR_kernel, N_DELAYS_FIR_kernel_MM, y1);
                                                                                   ^
                                                                                   &
2 warnings and 2 errors generated.
make: *** [obj/FIR_HLS.o] Error 1
ERROR: [SIM 211-100] 'csim_design' failed: compilation error(s).
INFO: [SIM 211-3] *************** CSIM finish ***************
ERROR: 4
INFO: [HLS 200-112] Total CPU user time: 3 seconds. Total CPU system time: 1 seconds. Total elapsed time: 7.72 seconds; peak allocated memory: 273.625 MB.
